--- a/contact.html
+++ b/contact.html
@@ -30,10 +30,12 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="plans.html">Plans</a></li>
+											<li><a href="neighborhood.html">Neighborhood</a></li>
 											<li><a href="features.html">Features</a></li>
 											<li><a href="builder.html">Builder</a></li>
 											<li><a href="contact.html">Contact</a></li>
-											<li><a href="elements.html">Elements</a></li>
+											<li><a href="index.html">Français</a></li>
+											<!-- <li><a href="elements.html">Elements</a></li> -->
 										</ul>
 									</div>
 								</li>
@@ -45,22 +47,23 @@
 					<article id="main">
 						<header>
 							<h2>Contact</h2>
-							<p>Questions? We have the answers!</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<p><b>Telephone:</b>  514-111-1111<br>
-								<b>Email:</b>  condo@gmail.com</p>
+								<center>
+									<p><b>Telephone:</b>  514-111-1111<br>
+									<b>Email:</b>  condo@gmail.com</p>
 
-								<div id="map_canvas" style="width:400px; height:300px;" ></div>
-								<p></p>
-								<button onclick="displayMap()">Voir la carte</button>
+									<div id="map_canvas" style="width:400px; height:300px;" ></div>
+									<p></p>
+									<button onclick="displayMap()">Voir la carte</button>
+								</center>
 
 								<hr />
 
 								<section>
-
+									<p>Questions? We have the answers!</p>
 									<form method="post" action="https://formspree.io/condo@gmail.ca">
 										<div class="row uniform">
 											<div class="6u 12u$(xsmall)">
@@ -99,18 +102,11 @@
 					</article>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
+					<!-- <footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
-					</footer>
+					</footer> -->
 
 			</div>
 
