--- a/neighborhood.html
+++ b/neighborhood.html
@@ -30,7 +30,6 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="plans.html">Plans</a></li>
-											<li><a href="neighborhood.html">Neighborhood</a></li>
 											<li><a href="features.html">Features</a></li>
 											<li><a href="builder.html">Builder</a></li>
 											<li><a href="contact.html">Contact</a></li>
@@ -46,37 +45,47 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Features</h2>
+							<h2>Neighborhood</h2>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<div class="row">
-									<ul>
-										<li>Exceptional location in the heart of Downtown Laval</li>
-										<li>5 storey building</li>
-										<li>Modern Design and Architecture</li>
-										<li>Superior quality wood / reinforced concrete construction </li>
-										<li>Total of 19 spacious units with generous  windows and 9 foot ceiling height </li>
-										<li>2 two-storey penthouse units with private terraces</li>
-										<li>Elevator</li>
-										<li>Trash chute with recycling system</li>
-										<li>Entrance lobby and common spaces in a modern design with contemporary furnishings</li>
-										<li>Interior and exterior parking</li>
-										<li>Interphone system</li>
-										<li>Bicycle racks</li>
-										<li>Tire storage room in basement</li>
-										<li>Electric vehicle charger</li>
-										<li>Rooftop terrace with contemporary garden furniture</li>
-									</ul>
+								<p>Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval. Enjoy urban living with the tranquility of your own residential neighborhood.</p>
+								<p>Condos Cité Avenir is nearby to all your needs; whether it be for work, leisure, transit, entertainment, nightlife, Schools, shopping.</p>
+
+								<img class="map" style="margin-top: 40px; display: block; margin-left: auto; margin-right: auto; width: 95%; height: auto;" src="images/planDeSite.jpg">
+
+								<p></p>
+
+								<div class="table-wrapper">
+									<table>
+										<tbody>
+											<tr>
+												<td>Metro Montmorency</td>
+												<td>Éspace Montmorency</td>
+											</tr>
+											<tr>
+												<td>Carrefour Laval</td>
+												<td>Centropolis Laval</td>
+											</tr>
+											<tr>
+												<td>Salle André-Mathieu</td>
+												<td>Place Bell</td>
+											</tr>
+											<tr>
+												<td>Colossus Laval</td>
+												<td>Quartier Laval</td>
+											</tr>
+											<tr>
+												<td>Collège Montmorency</td>
+												<td>Université de Montréal Campus Laval</td>
+											</tr>
+										</tbody>
+									</table>
 								</div>
 
-								<center><p>**conditions may apply**</p></center>
-								<p></p>
-								<p></p>
-								<center><h4>Download complete list of features</h4></center>
-								<p></p>
-								<center><a href="#" class="button special icon fa-download">Project Specifications</a><center>
+								<p>Take advandage of La Ligne 360! The free public transit service that circle’s around the Laval downtown area. Condos Cité Avenir is just steps from the Du Souvenir / De L’avenir bus stop.</p>
+
 							</div>
 						</section>
 					</article>
