--- a/plans.html
+++ b/plans.html
@@ -5,6 +5,15 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<style>
+		#parent #popup {
+			display: none;
+		}
+		
+		#parent:hover #popup {
+			display: block;
+		}
+	</style>
 	<head>
 		<title>Condos Cité Avenir Laval</title>
 		<meta charset="utf-8" />
@@ -30,10 +39,12 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="plans.html">Plans</a></li>
+											<li><a href="neighborhood.html">Neighborhood</a></li>
 											<li><a href="features.html">Features</a></li>
 											<li><a href="builder.html">Builder</a></li>
 											<li><a href="contact.html">Contact</a></li>
-											<li><a href="elements.html">Elements</a></li>
+											<li><a href="index.html">Français</a></li>
+											<!-- <li><a href="elements.html">Elements</a></li> -->
 										</ul>
 									</div>
 								</li>
@@ -45,40 +56,35 @@
 					<article id="main">
 						<header>
 							<h2>Plans</h2>
-							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 						</header>
 						<section class="wrapper style5">
-							<div class="inner">
 
-								<h3>Lorem ipsum dolor</h3>
-								<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
-
-								<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
-
-								<hr />
-
-								<h4>Feugiat aliquam</h4>
-								<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
-
-								<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p>
-
+							<div style="text-align: center; " id="parent">
+								<h2>Click a floor for plans: </h2>
+								<h2 id="popup1" style="display: none; position: absolute; left: 50%; margin-left: -50px; margin-top: 50px;">Floor 1</h2>
+								<h2 id="popup2" style="display: none; position: absolute; left: 50%; margin-left: -50px; margin-top: 50px;">Floor 2</h2>
+								<h2 id="popup3" style="display: none; position: absolute; left: 50%; margin-left: -50px; margin-top: 50px;">Floor 3</h2>
 							</div>
+
+							<div>
+								<img class="map" style="display: block; margin-left: auto; margin-right: auto;" src="images/plansTest.jpg" usemap="#image-map">
+
+								<map name="image-map">
+									<area class="level3" target="_parent" alt="level3" title="level3" href="level3.html" coords="125,324,279,278,462,303,498,296,647,311,663,305,786,319,837,308,838,244,788,239,787,229,662,217,650,218,495,178,463,201,279,165,126,240" shape="poly">
+									<area class="level2" target="_self" alt="level2" title="level2" href="level2.html" coords="126,324,127,386,280,363,462,373,496,372,648,381,663,376,787,384,836,379,839,309,787,320,666,307,648,311,496,297,463,302,278,279" shape="poly">
+									<area class="level1" target="_top" alt="level1" title="level1" href="level1.html" coords="127,387,126,448,281,448,462,444,495,451,648,449,673,448,834,439,837,381,789,384,666,376,649,379,496,371,461,374,279,363" shape="poly">
+								</map>
+							</div>
+
 						</section>
 					</article>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
+					<!-- <footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
-					</footer>
+					</footer> -->
 
 			</div>
 
@@ -90,6 +96,26 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<script src="jquery-3.3.1.min.js"></script>
+			<script type="text/javascript" src="../jquery.maphilight.min.js"></script>
+			<script>
+				$('.level3').mouseover(function() {
+					document.getElementById('popup3').style.display = 'block';
+				}).mouseout(function(){
+					document.getElementById('popup3').style.display = 'none';
+				});
 
+				$('.level2').mouseover(function() {
+					document.getElementById('popup2').style.display = 'block';
+				}).mouseout(function(){
+					document.getElementById('popup2').style.display = 'none';
+				});
+
+				$('.level1').mouseover(function() {
+					document.getElementById('popup1').style.display = 'block';
+				}).mouseout(function(){
+					document.getElementById('popup1').style.display = 'none';
+				});
+			</script>
 	</body>
 </html>
