--- a/features.html
+++ b/features.html
@@ -34,7 +34,6 @@
 											<li><a href="features.html">Features</a></li>
 											<li><a href="builder.html">Builder</a></li>
 											<li><a href="contact.html">Contact</a></li>
-											<li><a href="index.html">Français</a></li>
 											<!-- <li><a href="elements.html">Elements</a></li> -->
 										</ul>
 									</div>
@@ -51,42 +50,75 @@
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<div class="row">
-									<ul>
-										<li>Exceptional location in the heart of Downtown Laval</li>
-										<li>5 storey building</li>
-										<li>Modern Design and Architecture</li>
-										<li>Superior quality wood / reinforced concrete construction </li>
-										<li>Total of 19 spacious units with generous  windows and 9 foot ceiling height </li>
-										<li>2 two-storey penthouse units with private terraces</li>
-										<li>Elevator</li>
-										<li>Trash chute with recycling system</li>
-										<li>Entrance lobby and common spaces in a modern design with contemporary furnishings</li>
-										<li>Interior and exterior parking</li>
-										<li>Interphone system</li>
-										<li>Bicycle racks</li>
-										<li>Tire storage room in basement</li>
-										<li>Electric vehicle charger</li>
-										<li>Rooftop terrace with contemporary garden furniture</li>
-									</ul>
+								<div class="table-wrapper">
+									<center>
+									<table style="max-width: 600px;">
+										<tbody>
+											<tr>
+												<td>Exceptional location in the heart of Downtown Laval</td>
+											</tr>
+											<tr>
+												<td>5 storey building</td>
+											</tr>
+											<tr>
+												<td>Modern Design and Architecture</td>
+											</tr>
+											<tr>
+												<td>Superior quality wood / reinforced concrete construction </td>
+											</tr>
+											<tr>
+												<td>Total of 19 spacious units with generous  windows and 9 foot ceiling height </td>
+											</tr>
+											<tr>
+												<td>2 two-storey penthouse units with private terraces</td>
+											</tr>
+											<tr>
+												<td>Elevator</td>
+											</tr>
+											<tr>
+												<td>Trash chute with recycling system</td>
+											</tr>
+											<tr>
+												<td>Entrance lobby and common spaces in a modern design with contemporary furnishings</td>
+											</tr>
+											<tr>
+												<td>Interior and exterior parking</td>
+											</tr>
+											<tr>
+												<td>Interphone system</td>
+											</tr>
+											<tr>
+												<td>Bicycle racks</td>
+											</tr>
+											<tr>
+												<td>Tire storage room in basement</td>
+											</tr>
+											<tr>
+												<td>Electric vehicle charger</td>
+											</tr>
+											<tr>
+												<td>Rooftop terrace with contemporary garden furniture</td>
+											</tr>
+										</tbody>
+									</table>
+								</center>
 								</div>
 
 								<center><p>**conditions may apply**</p></center>
 								<p></p>
 								<p></p>
-								<center><h4>Download complete list of features</h4></center>
-								<p></p>
-								<center><a href="#" class="button special icon fa-download">Project Specifications</a><center>
+								<center><h4 style="margin-top: 50px">Download complete list of features</h4></center>
+								<center><a href="Instructions.pdf" download style="margin-bottom: 50px" class="button special icon fa-download">Project Specifications</a><center>
 							</div>
 						</section>
 					</article>
 
 				<!-- Footer -->
-					<!-- <footer id="footer">
+				<footer id="footer" style="padding: 2em 0 0.5em 0;">
 						<ul class="copyright">
 							<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
-					</footer> -->
+					</footer>
 
 			</div>
 
