--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Condos Cité Avenir Laval</a></h1>
+						<!-- <h1><a href="index.html">Condos Cité Avenir Laval</a></h1> -->
 						<nav id="nav">
 							<ul>
+								<li class="alt">
+									<a href="index.html"><span>French</span></a>
+								</li>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
@@ -34,8 +37,6 @@
 											<li><a href="features.html">Features</a></li>
 											<li><a href="builder.html">Builder</a></li>
 											<li><a href="contact.html">Contact</a></li>
-											<li><a href="index.html">Français</a></li>
-											<li><a href="elements.html">Elements</a></li>
 										</ul>
 									</div>
 								</li>
@@ -50,19 +51,17 @@
 							<!-- <p>Another fine responsive<br />
 							site template freebie<br />
 							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p> -->
-							<ul class="actions">
-								<li><a href="#" class="button special">Enter</a></li>
-							</ul>
+							<img style="height: auto; width: 100px; display: block; margin-left: auto; margin-right: auto;" src="images/logo.png">
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style1 special">
+					<section id="one" class="wrapper style1 special" style="padding: 4em 0 1em 0;">
 						<div class="inner">
 							<header class="major">
-								<h3 style="text-transform: none;">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval, just steps from Metro Montmorency, Autoroutes 440 and 15</h3>
-								<h4 style="text-transform: none;">One, two, or three  bedroom units are available.</h4>
+								<h3 style="text-transform: none; font-weight: 400; font-family: Tahoma, Geneva, sans-serif;">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval, just steps from Metro Montmorency, Autoroutes 440 and 15</h3>
+								<h4 style="text-transform: none; font-weight: 400; font-family: Tahoma, Geneva, sans-serif;">One, two, or three  bedroom units are available.</h4>
 							</header>
 						</div>
 					</section>
@@ -127,7 +126,7 @@
 					</section>
 
 				<!-- Footer -->
-					<footer id="footer">
+					<footer id="footer" style="padding: 2em 0 0.5em 0;">
 						<ul class="copyright">
 							<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
