--- a/level1.html
+++ b/level1.html
@@ -30,10 +30,10 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="plans.html">Plans</a></li>
+											<li><a href="neighborhood.html">Neighborhood</a></li>
 											<li><a href="features.html">Features</a></li>
 											<li><a href="builder.html">Builder</a></li>
 											<li><a href="contact.html">Contact</a></li>
-											<li><a href="index.html">Français</a></li>
 											<!-- <li><a href="elements.html">Elements</a></li> -->
 										</ul>
 									</div>
@@ -50,10 +50,7 @@
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<h3>Lorem ipsum dolor</h3>
-								<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
-
-								<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
+								<img class="map" style="margin-top: 40px; display: block; margin-left: auto; margin-right: auto; width: 95%; height: auto;" src="images/plansRoof.jpg">
 
 								<hr />
 
@@ -67,11 +64,11 @@
 					</article>
 
 				<!-- Footer -->
-					<!-- <footer id="footer">
+				<footer id="footer" style="padding: 2em 0 0.5em 0;">
 						<ul class="copyright">
 							<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
-					</footer> -->
+					</footer>
 
 			</div>
 
