--- a/neighborhood.html
+++ b/neighborhood.html
@@ -30,10 +30,10 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="plans.html">Plans</a></li>
+											<li><a href="neighborhood.html">Neighborhood</a></li>
 											<li><a href="features.html">Features</a></li>
 											<li><a href="builder.html">Builder</a></li>
 											<li><a href="contact.html">Contact</a></li>
-											<li><a href="index.html">Français</a></li>
 											<!-- <li><a href="elements.html">Elements</a></li> -->
 										</ul>
 									</div>
@@ -49,7 +49,6 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-
 								<p>Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval. Enjoy urban living with the tranquility of your own residential neighborhood.</p>
 								<p>Condos Cité Avenir is nearby to all your needs; whether it be for work, leisure, transit, entertainment, nightlife, Schools, shopping.</p>
 
@@ -61,24 +60,24 @@
 									<table>
 										<tbody>
 											<tr>
-												<td>Metro Montmorency</td>
-												<td>Éspace Montmorency</td>
+												<td width="50%" style="text-align: center;">Metro Montmorency</td>
+												<td width="50%" style="text-align: center;">Éspace Montmorency</td>
 											</tr>
 											<tr>
-												<td>Carrefour Laval</td>
-												<td>Centropolis Laval</td>
+												<td width="50%" style="text-align: center;">Carrefour Laval</td>
+												<td width="50%" style="text-align: center;">Centropolis Laval</td>
 											</tr>
 											<tr>
-												<td>Salle André-Mathieu</td>
-												<td>Place Bell</td>
+												<td width="50%" style="text-align: center;">Salle André-Mathieu</td>
+												<td width="50%" style="text-align: center;">Place Bell</td>
 											</tr>
 											<tr>
-												<td>Colossus Laval</td>
-												<td>Quartier Laval</td>
+												<td width="50%" style="text-align: center;">Colossus Laval</td>
+												<td width="50%" style="text-align: center;">Quartier Laval</td>
 											</tr>
 											<tr>
-												<td>Collège Montmorency</td>
-												<td>Université de Montréal Campus Laval</td>
+												<td width="50%" style="text-align: center;">Collège Montmorency</td>
+												<td width="50%" style="text-align: center;">Université de Montréal Campus Laval</td>
 											</tr>
 										</tbody>
 									</table>
@@ -86,16 +85,18 @@
 
 								<p>Take advandage of La Ligne 360! The free public transit service that circle’s around the Laval downtown area. Condos Cité Avenir is just steps from the Du Souvenir / De L’avenir bus stop.</p>
 
+								<img class="map" style="margin-top: 40px; display: block; margin-left: auto; margin-right: auto; width: 95%; height: auto;" src="images/planDeQuartier2.png">
+
 							</div>
 						</section>
 					</article>
 
 				<!-- Footer -->
-					<!-- <footer id="footer">
+				<footer id="footer" style="padding: 2em 0 0.5em 0;">
 						<ul class="copyright">
 							<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
-					</footer> -->
+					</footer>
 
 			</div>
 
