--- a/level1.html
+++ b/level1.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link rel="icon" href="images/logo.png">
 	</head>
 	<body>
 
@@ -21,7 +22,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Condos Cité Avenir Laval</a></h1>
+							<img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo.png">
+							<h1 style="padding-left: 30px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
