--- a/neighborhood.html
+++ b/neighborhood.html
@@ -5,6 +5,23 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<style>
+		#main > header {
+			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
+			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
+			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
+			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
+		}
+
+		@media screen and (max-width: 980px) {
+			#main > header {
+				background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
+				background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
+				background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
+				background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter3.jpg") !important;
+			}
+		}
+	</style>
 	<head>
 		<title>Condos Cité Avenir Laval</title>
 		<meta charset="utf-8" />
@@ -13,6 +30,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link rel="icon" href="images/logo.png">
 	</head>
 	<body>
 
@@ -21,7 +39,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Condos Cité Avenir Laval</a></h1>
+							<img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo.png">
+							<h1 style="padding-left: 30px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -51,13 +70,13 @@
 							<div class="inner">
 								<p>Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval. Enjoy urban living with the tranquility of your own residential neighborhood.</p>
 								<p>Condos Cité Avenir is nearby to all your needs; whether it be for work, leisure, transit, entertainment, nightlife, Schools, shopping.</p>
-
-								<img class="map" style="margin-top: 40px; display: block; margin-left: auto; margin-right: auto; width: 95%; height: auto;" src="images/planDeSite.jpg">
+								<p>Take advandage of La Ligne 360! The free public transit service that circle’s around the Laval downtown area. Condos Cité Avenir is just steps from the Du Souvenir / De L’avenir bus stop.</p>
+								<!-- <img class="map" style="margin-top: 40px; display: block; margin-left: auto; margin-right: auto; width: 95%; height: auto;" src="images/planDeSite.jpg"> -->
 
 								<p></p>
 
 								<div class="table-wrapper">
-									<table>
+									<table style="margin-top: 20px;">
 										<tbody>
 											<tr>
 												<td width="50%" style="text-align: center;">Metro Montmorency</td>
@@ -82,21 +101,19 @@
 										</tbody>
 									</table>
 								</div>
-
-								<p>Take advandage of La Ligne 360! The free public transit service that circle’s around the Laval downtown area. Condos Cité Avenir is just steps from the Du Souvenir / De L’avenir bus stop.</p>
-
-								<img class="map" style="margin-top: 40px; display: block; margin-left: auto; margin-right: auto; width: 95%; height: auto;" src="images/planDeQuartier2.png">
-
 							</div>
 						</section>
+
+						<img class="map" style="display: block; width: 100%; height: auto;" src="images/planDeQuartier2.png">
+
 					</article>
 
 				<!-- Footer -->
 				<footer id="footer" style="padding: 2em 0 0.5em 0;">
-						<ul class="copyright">
-							<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+					<ul class="copyright">
+						<li>&copy; Condos Cité Avenir Laval</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</footer>
 
 			</div>
 
