--- a/plans.html
+++ b/plans.html
@@ -15,7 +15,6 @@
 		}
 
 		@media screen and (max-width: 736px) {
-
 			.big {
 				display: none;
 			}
@@ -23,9 +22,23 @@
 			.small {
 				display: block !important;
 			}
-
 		}
 
+		#main > header {
+			background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner.jpg") !important;
+			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner.jpg") !important;
+			background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner.jpg") !important;
+			background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/banner.jpg") !important;
+		}
+
+		@media screen and (max-width: 980px) {
+			#main > header {
+				background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter1.jpg") !important;
+				background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter1.jpg") !important;
+				background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter1.jpg") !important;
+				background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("images/shutter1.jpg") !important;
+			}
+		}
 	</style>
 	<head>
 		<title>Condos Cité Avenir Laval</title>
@@ -35,6 +48,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link rel="icon" href="images/logo.png">
 	</head>
 	<body>
 
@@ -43,7 +57,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Condos Cité Avenir Laval</a></h1>
+						<img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo.png">
+						<h1 style="padding-left: 30px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -71,7 +86,7 @@
 						</header>
 						<section class="wrapper style5">
 
-							<div style="text-align: center; " id="parent">
+							<div style="text-align: center;" id="parent">
 								<h2>Click a floor for plans: </h2>
 								<h2 id="popup1" style="display: none; position: absolute; left: 50%; margin-left: -50px; margin-top: 50px;">Floor 1</h2>
 								<h2 id="popup2" style="display: none; position: absolute; left: 50%; margin-left: -50px; margin-top: 50px;">Floor 2</h2>
@@ -89,13 +104,23 @@
 							</div>
 
 							<div class="small" style="display: none;">
-								<img class="map" style="display: block; margin-left: auto; margin-right: auto;" src="images/plansSmall.jpg" usemap="#image-map">
-
-								<map name="image-map">
-									<area class="level3" target="_blank" alt="level3" title="level3" href="level3.html" coords="46,113,98,98,162,107,174,104,227,110,277,112,294,108,295,86,276,80,211,69,204,69,174,61,164,71,98,57,76,66,68,63,42,83,43,105" shape="poly">
-									<area class="level2" target="_blank" alt="level2" title="level2" href="level2.html" coords="45,137,99,126,162,130,174,130,276,133,293,131,295,109,278,113,228,109,176,102,163,106,99,97,45,113,45,164,99,158,161,155,189,159,227,156,274,157,291,153,292,143,276,143,274,132,174,130,98,126" shape="poly">
-									<area class="level1" target="_blank" alt="level1" title="level1" href="level1.html" coords="" shape="poly">
-								</map>
+								<div class="table-wrapper">
+									<center>
+									<table style="max-width: 600px;">
+										<tbody>
+											<tr>
+												<td style="text-align: center;"><a href="level1.html">Floor 1</a></td>
+											</tr>
+											<tr>
+												<td style="text-align: center;"><a href="level2.html">Floor 2</a></td>
+											</tr>
+											<tr>
+												<td style="text-align: center;"><a href="level3.html">Floor 3</a></td>
+											</tr>
+										</tbody>
+									</table>
+									</center>
+								</div>
 							</div>
 
 						</section>
