--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link rel="icon" href="images/logo.png">
 	</head>
 	<body class="landing">
 
@@ -21,11 +22,12 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
+						<!-- <img style="height: 40px; max-width: 40px; margin-left: 4px; margin-top: 4px;" src="images/logo.png"> -->
 						<!-- <h1><a href="index.html">Condos Cité Avenir Laval</a></h1> -->
 						<nav id="nav">
 							<ul>
 								<li class="alt">
-									<a href="index.html"><span>French</span></a>
+									<a href="index.html"><span>Français</span></a>
 								</li>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
